docs/css/media-query.css
/* RESET RULE */
*,
*::after,
*::before {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
}

body {
  min-height: 100 vh;
  font-family: "IBM Plex Sans", sans-serif;
}

/**************
   VARIABLES
**************/
/**************
   MIX-INS
**************/
/**************
   TYPOGRAPHY
 **************/
h1 {
  font-family: "Montserrat", sans-serif;
  font-size: 3.75rem;
  font-weight: 900;
  color: #17252A;
}

h2 {
  font-family: "Montserrat", sans-serif;
  font-size: 2rem;
  font-weight: 900;
  letter-spacing: 0.1rem;
  color: #17252A;
  grid-column: 1/-1;
  grid-row: span 1;
  margin-block: 3rem;
  text-align: center;
}

h3 {
  font-family: "Montserrat", sans-serif;
  font-size: 1.375rem;
  letter-spacing: 0.1rem;
  font-weight: 900;
  color: #17252A;
  padding-inline: 0.75rem;
  margin-block-end: 1rem;
}

h4 {
  font-family: "Montserrat", sans-serif;
  font-size: 1.25rem;
  letter-spacing: 0.1rem;
  font-weight: bold;
  color: #17252A;
  margin-block: 1rem;
}

h5 {
  font-family: "IBM Plex Sans", sans-serif;
  font-size: clamp(1.1rem, 2rem, 1.4vw);
  font-weight: 600;
  color: #FEFFFF;
}

p {
  font-family: "IBM Plex Mono", monospace;
  font-size: 1.125rem;
  line-height: 1.7rem;
  letter-spacing: 0.03rem;
  font-weight: 500;
  color: #2B7A78;
}

/**************
   BACKGROUND
 **************/
#video-bg {
  position: fixed;
  z-index: -2;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.color-screen {
  position: fixed;
  z-index: -1;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  height: 100%;
  width: 100%;
  background: rgba(23, 37, 42, 0.6);
}

section,
.main-block {
  display: flex;
  flex-wrap: wrap;
}

.content-block {
  display: flex;
  flex-wrap: wrap;
  flex-basis: 100%;
  overflow: hidden;
}

.title {
  margin-block: 1vh;
  border-bottom: 0.2rem solid;
}

.shadow {
  text-shadow: 0.25rem 0.125rem #9B1D20;
  -webkit-text-stroke-width: 1px;
  -moz-text-stroke-width: 1px;
  -webkit-text-stroke-color: white;
  -moz-text-stroke-color: white;
  color: transparent;
}

.drop-shadow {
  float: right;
}

.typed {
  animation: typing 2s steps(30, end), blink-caret 0.5s step-end infinite;
}

/* The typing effect */
@keyframes typing {
  from {
    width: 0;
  }
  to {
    width: 100%;
  }
}
/* The typewriter cursor effect */
@keyframes blink-caret {
  from, to {
    border-color: transparent;
  }
  50% {
    border-color: orange;
  }
}
/**************
    TABLET
 **************/
@media all and (max-width: 900px) {
  body {
    /* NAV BAR */
    /* nav ul .nav-item:hover{
      border-radius: 5px;
      box-shadow: inset 0 0 5px #33ffff,
                  inset 0 0 10px #66ffff;
    } */
  }
  body #introduction .container {
    top: 30%;
  }
  body #profile-picture {
    justify-content: left;
  }
  body #profile-picture img {
    height: 80vw;
    margin-inline: 0;
  }
  body #about-me {
    padding-inline: 2rem;
  }
  body #about-me article {
    padding-inline: 0;
    grid-column: 1/6;
  }
  body #about-me #education {
    grid-column: 1/6;
    margin-block-start: 1.5rem;
  }
  body #about-me #education h3 {
    margin-block-end: 0;
  }
  body #about-me #education #degree {
    margin-block-start: 0.25rem;
  }
  body #about-me #skills {
    grid-column: 7/13;
  }
  body #projects .grid-container .flex-container .project {
    min-width: 480px;
  }
  body #projects .grid-container .flex-container .project .description {
    margin-inline-start: 1rem;
    margin-block-start: 1.5rem;
    margin-block-end: 0rem;
  }
  body #projects .grid-container .flex-container .project .description .desc {
    padding-inline: 0.25rem;
    margin-block-end: 0;
  }
  body #projects .grid-container .flex-container .project .description h4 {
    margin-block-start: 1.5rem;
    margin-block-end: 0;
  }
  body #projects .grid-container .flex-container .project .description ul {
    margin-block-start: 0.5rem;
  }
  body #projects .grid-container .flex-container .project .more-info {
    margin-block: 1.5rem;
  }
  body #projects .grid-container .flex-container .project .more-info a {
    margin-block-end: 0;
  }
  body nav {
    padding: 5px 30px;
    align-items: flex-start;
    background-color: #3AAFA9;
  }
  body nav ul .nav-item {
    width: 100%;
    padding: 1rem 0.5rem;
    display: none;
  }
  body nav ul .nav-item.show {
    display: block;
  }
  body nav ul li.btn {
    display: block;
    padding: 1rem 1rem;
    border: none;
  }
  body nav ul nav-item:hover:after {
    opacity: 0;
  }
}
/**************
     MOBILE
 **************/
@media all and (max-width: 500px) {
  body header {
    grid-template-columns: 1fr;
    grid-template-rows: 50vh 50vh;
  }
  body header #introduction {
    flex-direction: column-reverse;
    height: 100%;
    width: 100%;
    align-self: flex-start;
    justify-self: flex-start;
  }
  body header #introduction .container {
    position: static;
    transform: translate(0, 0);
    display: flex;
    flex-direction: column;
    align-content: flex-end;
    justify-content: flex-end;
    margin-inline-start: 2rem;
    margin-block-end: 1rem;
  }
  body header #introduction .container h1 {
    font-size: 3rem;
  }
  body header #introduction .container p {
    font-size: 1rem;
  }
  body header #introduction .container #desktop-cv {
    visibility: hidden;
    position: absolute;
  }
  body header #introduction #contacts {
    position: absolute;
    top: 0%;
    height: fit-content;
  }
  body header #introduction #contacts a img {
    width: 2.75rem;
  }
  body header #profile-picture #mobile-cv {
    visibility: visible;
    z-index: 1;
  }
  body header #profile-picture #mobile-cv .btn-cv {
    margin-block-start: 1rem;
    margin-inline-start: 1.5rem;
  }
  body header #profile-picture img {
    position: absolute;
    bottom: 0%;
    right: 0%;
    transform: translate(18%, 0%) scaleX(-1);
    height: 48%;
    z-index: 0;
  }
  body h2 {
    margin-block-start: 2rem;
    margin-block-end: 0.5rem;
  }
  body #about-me .grid-container {
    display: flex;
    flex-direction: column;
    padding-inline: 1rem;
  }
  body #about-me h3 {
    margin-block-end: 0;
  }
  body #about-me #skills {
    margin-block-start: 2rem;
  }
  body #about-me #skills #skills-icons .icon-container {
    flex: 1 0 50%;
    margin-block-start: 0.5rem;
    margin-block-end: 0;
  }
  body #about-me #education {
    margin-block-start: 2rem;
  }
  body #about-me #education #degree {
    margin-block-start: 0.5rem;
  }
  body #projects .grid-container .flex-container {
    flex-basis: 100%;
  }
  body #projects .grid-container .flex-container .project {
    min-width: 95vw;
  }
  body #projects .grid-container .flex-container .project .repo {
    grid-column: 1/-1;
    grid-row: 1/1;
  }
  body #projects .grid-container .flex-container .project .stack {
    grid-column: 1/-1;
    grid-row: 2/2;
    padding-block-start: 0.75rem;
    flex-wrap: nowrap;
  }
  body #projects .grid-container .flex-container .project .description {
    grid-column: 1/-1;
    grid-row: 3/3;
    margin: 0;
    margin-block-start: 1rem;
  }
  body #projects .grid-container .flex-container .project .description p {
    font-size: 1rem;
    margin-block-end: 0;
  }
  body #projects .grid-container .flex-container .project .description h4 {
    padding-inline-start: 1rem;
    margin-block-end: 0;
  }
  body #projects .grid-container .flex-container .project .description ul {
    margin-block-start: 0.75rem;
    margin-inline-start: 1rem;
  }
  body #projects .grid-container .flex-container .project .description ul li {
    font-size: 1rem;
  }
  body #projects .grid-container .flex-container .project .more-info {
    margin-block: 0.75rem;
  }
  body #projects .grid-container .flex-container .project .more-info a {
    margin-block-end: 0.75rem;
  }
}

